--- a/app/views/profiles/_biomed_table.html.erb
+++ b/app/views/profiles/_biomed_table.html.erb
@@ -3,6 +3,7 @@
     <tr>
       <th>Last title</th>
       <th>Highest position</th>
+      <th>Last field</th>
       <th>Experience</th>
       <th>Highest degree</th>
       <th>Geographical restrictions</th>
