--- a/app/views/profiles/_biomed_form.html.erb
+++ b/app/views/profiles/_biomed_form.html.erb
@@ -19,11 +19,10 @@
 		  	<%= job_form.input :company_name, label: 'Company name (optional)' %>
 		  	<%= job_form.input :company_size, collection: [["myself only",1], ["2-10",2], ["11-50", 3],["51-200", 4],["201-500", 5],["501-1,000", 6],["1,001-5,000", 7],["5,001-10,000", 8],["10,001+",9]], prompt: "Select number of employees", label: 'Company size' %>
 		  	<%= job_form.input :company_stage_id, collection: [["pre-IPO",1], ["post-IPO",2]], prompt: "Select company's stage", label: 'Company stage (when you started)' %>
-		  	<%= job_form.association :field, label: 'Field', prompt: "Select most appropriate field" %>
-		  	<%= job_form.association :biomed_title, label: 'Title', prompt: "Select most appropriate title" %>
-		  	<%= job_form.association :biomed_position, label: 'Position', prompt: "Select position" %>
+		  	<%= job_form.association :field, collection: Field.order('name'), label: 'Your field', prompt: "Select most appropriate field" %>
+		  	<%= job_form.association :biomed_title, collection: BiomedTitle.order('name'), label: 'Your title', prompt: "Select most appropriate title", :include_blank => "not listed" %>
+		  	<%= job_form.association :biomed_position, label: 'Your position', prompt: "Select position" %>
 		  	<%= job_form.input :team_size, label: 'Number of people led by you', placeholder: 'e.g. "5"' %>
-		  	<%= job_form.association :biomed_skills, as: :check_boxes, label: 'Skills applied by you' %>
 		  	<%= job_form.input :start_date, label: 'Start date' %>
 		  	<%= job_form.input :end_date, label: 'End date' %>
 		  	<%= job_form.input :current, label: false, inline_label: 'I\'m currently holding this job (overwrites the end date)' %>
