--- a/app/views/profiles/_accepted_invitations_table.html.erb
+++ b/app/views/profiles/_accepted_invitations_table.html.erb
@@ -4,9 +4,9 @@
       <th>Name</th>
       <th>Last title</th>
       <th>Highest position</th>
+      <th>Last field</th>
       <th>Experience</th>
       <th>Highest degree</th>
-      <th>Geographical restrictions</th>
  
 
       
