only show highest position if it extits; hide some models in admin menu;

--- a/app/views/profiles/_invitation.html.erb
+++ b/app/views/profiles/_invitation.html.erb
@@ -2,7 +2,7 @@
 	
 
 	<td>
-		<%= invitation.candidate.profile.highest_position.name if invitation.candidate.profile.jobs.first %>
+		<%= invitation.candidate.profile.highest_position.name if invitation.candidate.profile.highest_position %>
 	</td>
 
 	<td>
