--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -55,7 +55,7 @@
 <div class="row">
 <div class ="span6">
 	<div class="center hero-unit">
-				<h1>Hackers</h1>
+				<h1>iOS/Android Hackers</h1>
 			     <h2>
 			      Post your CV anonymously. Sit back. Get recruited.
 			    </h2>
@@ -74,9 +74,9 @@
 </div>
 <div class ="span6">
   	<div class="center hero-unit">
-				<h1>Companies</h1>
+				<h1>Bay Area Companies</h1>
 			     <h2>
-			      Find more iOS hackers than anywhere else.
+			      Find more iOS/Android hackers than anywhere else.
 			    </h2>
 				    <br>
 				    
