--- a/app/views/profiles/_accepted_invitations_table.html.erb
+++ b/app/views/profiles/_accepted_invitations_table.html.erb
@@ -4,8 +4,8 @@
       <th>Name</th>
       <th>Highest position</th>
       <th>Platform</th>
-      <th>iOS experience</th>
-      <th>iOS apps</th>
+      <th>App building experience</th>
+      <th>Total apps</th>
       <th>Highest degree</th>
       <th>Bay Area</th>
  
