--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -65,7 +65,7 @@
 <%= link_to "Login", candidate_login_path, id: "sign_in", 
                                 class: "btn btn-large btn-info" %>
 
-				    <%= link_to "Login with fb", "/auth/facebook", id: "sign_in", 
+				    <%= link_to "fbLogin", "/auth/facebook", id: "sign_in", 
 				                                class: "btn btn-large btn-primary" %>
 
 					<br>
@@ -74,7 +74,7 @@
 </div>
 <div class ="span6">
   	<div class="center hero-unit">
-				<h1>Bay Area Companies</h1>
+				<h1>Companies</h1>
 			     <h2>
 			      Find more iOS/Android hackers than anywhere else.
 			    </h2>
