--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,10 +19,11 @@
 	<div class="container">
 		<div class="row">
   			<div class="span2">
-          <h2><%= link_to "TapCV", root_path %></h2>
+          <br>
+          <div class = "logo"> <%= link_to "TapCV", root_path %></div>
           <br>
         </div>
-        <div class="span6">  
+        <div class="span8">  
           <br>
           
           <% if current_candidate %>
