fixed type on formpage (silicon valley)

--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -4,8 +4,8 @@
   	<div class="form-inputs">
   		<div class ="module"></div>
 		<b>Your job status</b><br><br>
-			<%= f.input :silicon_valley, label: "Location full-time", inline_label: 'I am willing to work full-time in the Bay Area (Silion Valley).' %>
-			<%= f.input :silicon_valley_part_time, label: "Location part-time", inline_label: 'I am willing to work part-time/project based in the Bay Area (Silion Valley).' %>
+			<%= f.input :silicon_valley, label: "Location full-time", inline_label: 'I am willing to work full-time in the Bay Area (Silicon Valley).' %>
+			<%= f.input :silicon_valley_part_time, label: "Location part-time", inline_label: 'I am willing to work part-time/project based in the Bay Area (Silicon Valley).' %>
 			<%= f.input :general_min_yearly_salary, label: 'Minimum annual salary', placeholder: 'e.g. "65000"', hint: 'Your minimum desired annual salary (in USD)' %>
 
 			<%= f.input :general_min_hourly_salary, label: 'Minimum hourly salary', placeholder: 'e.g. "65"', hint: 'Your minimum desired hourly compensation (in USD)' %>
