change title for anonymous cv page

--- a/app/views/profiles/_full_profile.html.erb
+++ b/app/views/profiles/_full_profile.html.erb
@@ -3,7 +3,7 @@
 	<% if correct_candidate? == true %>
 	<h4>Your anonymous CV</h4>
 	<%else%>
-<h4>TapCV</h4>
+<h4>Anonymous CV</h4>
 <%end%>
 Last updated:</b> <%= time_ago_in_words(@profile.updated_at)%> ago
 <br><br>
