changed homepage slogan, disclaimer,slogan on new profile page, skills label on form

--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,5 +1,6 @@
 <h3>Post your CV anonymously.</h3>
-<h4>Your identity remains completely hidden.
+<h4>Your identity stays hidden. Companies will send you requests. You decide if you want to connect. </h4> 
+
 <% if current_candidate.uid != nil %>
 None of this will ever be visible on Facebook.
 <%end%>
