--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -4,8 +4,8 @@
   	<div class="form-inputs">
   		<div class ="module"></div>
 		<b>Your job status</b><br><br>
-			<%= f.input :silicon_valley, label: "Location full-time", inline_label: 'I am willing to work full-time in the Bay Area (Silicon Valley).' %>
-			<%= f.input :silicon_valley_part_time, label: "Location part-time", inline_label: 'I am willing to work part-time/project based in the Bay Area (Silicon Valley).' %>
+			<%= f.input :silicon_valley, label: "Location full-time", inline_label: 'I am willing to work full-time in the SF Bay Area.' %>
+			<%= f.input :silicon_valley_part_time, label: "Location part-time", inline_label: 'I am willing to work part-time/project based in the SF Bay Area.' %>
 			<%= f.input :general_min_yearly_salary, label: 'Minimum annual salary', placeholder: 'e.g. "65000"', hint: 'Your minimum desired annual salary (in USD)' %>
 
 			<%= f.input :general_min_hourly_salary, label: 'Minimum hourly salary', placeholder: 'e.g. "65"', hint: 'Your minimum desired hourly compensation (in USD)' %>
@@ -29,7 +29,7 @@
 		  	<%= job_form.association :position, label: 'Position', prompt: "Select position" %>
 		  	<%= job_form.input :team_size, label: 'Number of people led by you', placeholder: 'e.g. "5"' %>
 		  	<%= job_form.association :platforms, as: :check_boxes, label: 'Mobile platform' %>
-		  	<%= job_form.association :skills, as: :check_boxes, label: 'Skills applied by you' %>
+		  	<%= job_form.association :skills, as: :check_boxes, label: 'Other skills you used' %>
 		  	<%= job_form.input :start_date, label: 'Start date', :discard_day => true %>
 		  	<%= job_form.input :end_date, label: 'End date', :discard_day => true %>
 		  	<%= job_form.input :current, label: false, inline_label: 'I\'m currently holding this job (overwrites the end date)' %>
