--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -55,7 +55,7 @@
 <div class="row">
 <div class ="span6">
 	<div class="center hero-unit">
-				<h1>iOS/Android Hackers</h1>
+				<h1>Hackers</h1>
 			     <h2>
 			      Post your CV anonymously. Sit back. Get recruited.
 			    </h2>
@@ -65,10 +65,11 @@
 <%= link_to "Login", candidate_login_path, id: "sign_in", 
                                 class: "btn btn-large btn-info" %>
 
-				    <%= link_to "fbLogin", "/auth/facebook", id: "sign_in", 
+				    <%= link_to "fb Login*", "/auth/facebook", id: "sign_in", 
 				                                class: "btn btn-large btn-primary" %>
 
 					<br>
+					<div class ="fb_disclaimer">*None of your actions can be seen on Facebook </div>
 					
   	</div>
 </div>
@@ -76,7 +77,7 @@
   	<div class="center hero-unit">
 				<h1>Companies</h1>
 			     <h2>
-			      Find more iOS/Android hackers than anywhere else.
+			      Find the perfect iOS/Android hacker within your budget.
 			    </h2>
 				    <br>
 				    
