--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -29,7 +29,7 @@
 		  	<%= job_form.association :position, label: 'Position', prompt: "Select position" %>
 		  	<%= job_form.input :team_size, label: 'Number of people led by you', placeholder: 'e.g. "5"' %>
 		  	<%= job_form.association :platforms, as: :check_boxes, label: 'Mobile platform' %>
-		  	<%= job_form.association :skills, as: :check_boxes, label: 'Other skills you used' %>
+		  	<%= job_form.association :skills, as: :check_boxes, label: 'Other languages used by you' %>
 		  	<%= job_form.input :start_date, label: 'Start date', :discard_day => true %>
 		  	<%= job_form.input :end_date, label: 'End date', :discard_day => true %>
 		  	<%= job_form.input :current, label: false, inline_label: 'I\'m currently holding this job (overwrites the end date)' %>
