--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,5 +1,5 @@
 <h3>Post your CV anonymously.</h3>
-<h4>Your identity stays hidden. Companies will send you requests. You decide if you want to connect. </h4> 
+<h4>Your identity stays hidden. Companies will send requests. You decide if you want to connect. </h4> 
 
 <% if current_candidate.uid != nil %>
 None of this will ever be visible on Facebook.
