--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -77,7 +77,7 @@
   	<div class="center hero-unit">
 				<h1>Companies</h1>
 			     <h2>
-			      Find the perfect iOS/Android hacker within your budget.
+			      Find the perfect hacker within your budget.
 			    </h2>
 				    <br>
 				    
