--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,8 @@
         </div>
         <div class="span8">  
           <br>
-          
+          <b>Full-time iOS/Android hackers in the SF Bay Area</b>
+          <br>
           <% if current_candidate %>
             Logged in as <strong><%= current_candidate.name %></strong>
             | <%= link_to "Log Out", logout_path, id: "sign_out" %>
