--- a/app/views/profiles/_filter_table.html.erb
+++ b/app/views/profiles/_filter_table.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
 <div class ="span8">
-	<h3>Find the right hacker for your company's needs.</h3>
+	<h3>Full-time iOS/Android hackers in the SF Bay Area</h3>
 	<br>
   <%= render 'profiles/table' %>
 </div> 
