added full_time sv filter, set default to true in query

--- a/app/views/queries/_form.html.erb
+++ b/app/views/queries/_form.html.erb
@@ -9,6 +9,7 @@
 
     <%= f.input :max_salary, placeholder: 'e.g. "100000"', label: 'Max expected annual salary (USD)' %>
     <%= f.input :max_notice_period, placeholder: 'e.g. "6"', label: 'Maximum notice period (in weeks)' %>
+    <%= f.input :full_time, label: 'Full-time availability in Bay Area required',:wrapper => :inline_checkbox %>
     <%= f.input :work_permit_required, label: 'Current work permit required',:wrapper => :inline_checkbox %>
 
   </div>
