sending verification email to admin for new profiles and added option to request assistance

--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -75,6 +75,12 @@
 <br><br>
 
 <%= f.input :confirmed, label: false, inline_label: 'All my responses above are 100% true and I am able to provide reference material if needed.' %>	
+
+<div class ="module"></div>
+  <b>	Help needed? </b>
+<br><br>
+
+<%= f.input :help, label: false, inline_label: 'Check this if you would like TapCV to contact you to help you optimize your CV.' %>	
   </div>
 
   <div class="form-actions">
