increased slogan size

--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -2,7 +2,7 @@
 <h4>Your identity stays hidden. Companies will send requests. You decide if you want to connect. </h4> 
 
 <% if current_candidate.uid != nil %>
-<h4>None of this will ever be visible on Facebook.</h4>
+<h4>None of this information will be visible on Facebook.</h4>
 <%end%>
 </h4>
 <%= render 'form' %>
