added privacy policy

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,8 +64,8 @@
   			</div>
         <footer>
         <div class="span12">
-          <br><br>
-          TapCV © 2013
+          <br>
+          TapCV Inc. © 2013 | <%= link_to "Privacy", privacy_path %>
           <br><br>
         </div>
         </footer>
