--- a/app/views/profiles/_invitations_table.html.erb
+++ b/app/views/profiles/_invitations_table.html.erb
@@ -6,8 +6,8 @@
       <th>Platform</th>
       <th>App building experience</th>
       <th>Total apps</th>
-      <th>Highest degree</th>
-      <th>Bay Area</th>
+      <th><div class ="hidden-phone">Highest degree</div></th>
+      <th><div class ="hidden-phone">Bay Area</div></th>
       
     </tr>
   </thead>
