--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -55,8 +55,8 @@
 <div class="row">
 <div class ="span6">
 	<div class="center hero-unit">
-				<h1>Hackers</h1>
-			     <h2>
+				
+    <div class ="hidden-tablet hidden-phone"><h1>Hackers</h1><h2>
 			      Post your CV anonymously. Sit back. Get recruited.
 			    </h2>
 				    <br><%= link_to "Signup", candidate_signup_path, id: "sign_in", 
@@ -69,23 +69,72 @@
 				                                class: "btn btn-large btn-primary" %>
 
 					<br>
-					<div class ="fb_disclaimer">*None of your actions can be seen on Facebook </div>
+					<div class ="fb_disclaimer">*None of your actions can be seen on Facebook </div></div>
+    
+<div class ="visible-tablet"><h2>Hackers</h2><h4>
+			      Post your CV anonymously.<br> Sit back.<br> Get recruited.
+			    </h4>
+				    <br><%= link_to "Signup", candidate_signup_path, id: "sign_in", 
+                                class: "btn btn-medium btn-info" %>
+
+<%= link_to "Login", candidate_login_path, id: "sign_in", 
+                                class: "btn btn-medium btn-info" %>
+
+				    <%= link_to "fb Login*", "/auth/facebook", id: "sign_in", 
+				                                class: "btn btn-medium btn-primary" %>
+</div>
+    <div class ="visible-phone"><h2>Hackers</h2><h4>
+			      Post your CV anonymously.<br> Sit back.<br> Get recruited.
+			    </h4>
+				    <br><%= link_to "Signup", candidate_signup_path, id: "sign_in", 
+                                class: "btn btn-small btn-info" %>
+
+<%= link_to "Login", candidate_login_path, id: "sign_in", 
+                                class: "btn btn-small btn-info" %>
+
+				    <%= link_to "fb Login*", "/auth/facebook", id: "sign_in", 
+				                                class: "btn btn-small btn-primary" %>
+</div>
+			     
 					
   	</div>
 </div>
+
 <div class ="span6">
   	<div class="center hero-unit">
+  		<div class ="hidden-tablet hidden-phone">
 				<h1>Companies</h1>
 			     <h2>
 			      Find the perfect hacker within your budget.
 			    </h2>
 				    <br>
 				    
-<%= link_to "Find hackers", profiles_path, id: "sign_in", 
+				<%= link_to "Find hackers", profiles_path, id: "sign_in", 
                                 class: "btn btn-large btn-primary" %>
 
 
-					
+		</div>
+		<div class ="visible-tablet">
+				<h2>Companies</h2>
+			     <h4>
+			      Find the perfect hacker within your budget.
+			    </h4>
+				    <br>
+				    
+				<%= link_to "Find hackers", profiles_path, id: "sign_in", 
+                                class: "btn btn-medium btn-primary" %>
+		</div>
+		<div class ="visible-phone">
+				<h2>Companies</h2>
+			     <h4>
+			      Find the perfect hacker within your budget.
+			    </h4>
+				    <br>
+				    
+				<%= link_to "Find hackers", profiles_path, id: "sign_in", 
+                                class: "btn btn-small btn-primary" %>
+		</div>
+
   	</div>
 </div>
 </div>
