--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,10 +33,13 @@
           <div class = "logo"> <%= link_to "TapCV", root_path %></div>
           <br>
         </div>
-        <div class="span8">  
+        <div class="span8"> 
+            <div class ="hidden-phone">
           <br>
           <b>Full-time iOS/Android hackers in the SF Bay Area</b>
-          <br>
+           <br>
+        </div>
+         
           
           <% if current_candidate %>
             Logged in as <strong><%= current_candidate.name %></strong>
@@ -52,12 +55,14 @@
               <%= link_to "Log Out", logout_path %> | 
               <%= link_to "Settings", edit_user_path(current_user) %>
           <% else %>
+          <div class ="hidden-phone">
           Hackers: <%= link_to "Log In with Facebook", "/auth/facebook", id: "sign_in" %> |
           Companies:
               <%= link_to "Sign Up", signup_path %> or
               <%= link_to "Log In", login_path %>
+            </div>
             <% end %>
-            <br><br>
+            <div class ="hidden-phone"><br><br></div>
         </div>
         <div class="span12">
     				<%= yield %>
