--- a/app/views/profiles/_accepted_invitations_table.html.erb
+++ b/app/views/profiles/_accepted_invitations_table.html.erb
@@ -5,9 +5,9 @@
       <th>Highest position</th>
       <th>Platform</th>
       <th>App building experience</th>
-      <th>Total apps</th>
-      <th>Highest degree</th>
-      <th>Bay Area</th>
+      <th><div class ="hidden-phone">Total apps</div></th>
+      <th><div class ="hidden-phone">Highest degree</div></th>
+      <th><div class ="hidden-phone">Bay Area</div></th>
  
 
       
