--- a/app/views/profiles/_invitation.html.erb
+++ b/app/views/profiles/_invitation.html.erb
@@ -16,9 +16,9 @@
 		<%= apps_sum(invitation.candidate.profile.ios_apps, invitation.candidate.profile.android_apps) %>
 	</td>			
 	<td>
-		<%= display_education_level(invitation.candidate.profile.education_level) %>
+		<div class ="hidden-phone"><%= display_education_level(invitation.candidate.profile.education_level) %></div>
 	</td>
 	<td>
-		<%= short_willingness(invitation.candidate.profile.silicon_valley, invitation.candidate.profile.silicon_valley_part_time) %>
+		<div class ="hidden-phone"><%= short_willingness(invitation.candidate.profile.silicon_valley, invitation.candidate.profile.silicon_valley_part_time) %></div>
 	</td>		
   </tr>
