--- a/app/views/profiles/_table.html.erb
+++ b/app/views/profiles/_table.html.erb
@@ -6,9 +6,11 @@
       <th>Platform</th>
       <th>App building experience</th>
       <th>Total apps</th>
-      <th>Highest degree</th>
-      <th>Bay Area</th>
-      <th>Your status</th>
+      
+      <th><div class ="hidden-phone">Highest degree</div></th>
+      <th><div class ="hidden-phone">Bay Area</div></th>
+      <th><div class ="hidden-phone">Your status</div></th>
+
       
     </tr>
   </thead>
